# PersonalFinanceManagement

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
src/: app_controller.py  excel_gen.py  graph_gen.py  main.py
src/data/: db.py  models.py  monthly_gen.py
src/py_qml/: category_model.py  common.py  monthly_transaction_model.py  transaction_model.py
src/ui/: Main.qml  Themes.qml  qml.qrc  qmldir
src/ui/components/: CategoryField.qml  ChartComponent.qml  ChartLayout.qml  DateField.qml  DialogBase.qml  EditorWindow.qml  ExportComponent.qml  GradientBackground.qml  IconButton.qml  LoadingCircle.qml  MTransactionDelegate.qml  MTransactionFields.qml  Overview.qml  ScrollingList.qml  StringField.qml  TBarImageButton.qml  TBarTextIconButton.qml  TitleBar.qml  TransactionDelegate.qml  TransactionFields.qml  TypeField.qml  WindowResizer.qml
src/utility/: qt_util.py  save.py
