[project]
name = "personalfinancemanagement"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pyinstaller = "^6.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
